# Drift-Synth

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Source/dsp/: Arpeggiator.cpp  Arpeggiator.h  Chords.h  Constants.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  MacroEngine.cpp  MacroEngine.h  ModMatrix.cpp  ModMatrix.h  Oscillator.cpp  Oscillator.h  PolyBLEP.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
Source/dsp/effects/: Bitcrusher.cpp  Bitcrusher.h  Chorus.cpp  Chorus.h  Drive.cpp  Drive.h  EQ.cpp  EQ.h  Phaser.cpp  Phaser.h  PlateReverb.cpp  PlateReverb.h  StereoDelay.cpp  StereoDelay.h
Source/plugin/: Parameters.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h
Source/ui/: DriftLookAndFeel.cpp  DriftLookAndFeel.h  PluginEditor.cpp  PluginEditor.h
Source/ui/components/: AdvancedPanel.cpp  AdvancedPanel.h  DriftFieldPad.cpp  DriftFieldPad.h  EnvelopePanel.cpp  EnvelopePanel.h  FXPanel.cpp  FXPanel.h  FilterPanel.cpp  FilterPanel.h  KnobComponent.cpp  KnobComponent.h  LFOPanel.cpp  LFOPanel.h  ModMatrixPanel.cpp  ModMatrixPanel.h  OrbitPanel.cpp  OrbitPanel.h  OscExtraPanel.cpp  OscExtraPanel.h  OscillatorPanel.cpp  OscillatorPanel.h  PerformBar.cpp  PerformBar.h  PresetBar.cpp  PresetBar.h  PresetBrowser.cpp  PresetBrowser.h  SynthStrip.cpp  SynthStrip.h  VibeConsole.cpp  VibeConsole.h
tests/: CMakeLists.txt  TestEffectsStability.cpp  TestEnvelope.cpp  TestFilter.cpp  TestModMatrix.cpp  TestOscillator.cpp  TestVoice.cpp
